# DogBotSoftware

./: .gitignore  .~lock.motor.csv#  LICENSE  README.md
API/: .gitignore  CMakeLists.txt  DogBotAPI.files  DogBotAPI.includes
API/Python/: .gitignore  CMakeLists.txt  PyDogBotAPI.cxx  PyDogBotAPI.i  dogbot_api.i  pydogbotapi.i  setup.py
API/Python/reactrobotics/: .gitignore  .pydogbotapi.py.kate-swp  __init__.py  dogbot_api.py  pydogbotapi.py  utils.py
API/inc/: coms.hh  protocol.h
API/include/dogbot/: CallbackArray.hh  Common.hh  Coms.hh  ComsProxy.hh  ComsRecorder.hh  ComsRoute.hh  ComsSerial.hh  ComsUSB.hh  ComsVirtualDevice.hh  ComsZMQClient.hh  ComsZMQServer.hh  Device.hh  DeviceIMU.hh  DevicePlatformManager.hh  DogBotAPI.hh  DogBotController.hh  DogBotKinematics.hh  Drv8305Registers.hh  Drv8503Registers.hh  FirmwareUpdate.hh  Joint.hh  Joint4BarLinkage.hh  JointRelative.hh  LegController.hh  LegKinematics.hh  LegKinematicsV4.hh  LineABC2d.hh  NetServer.hh  PlatformManager.hh  PoseAngles.hh  SerialComs.hh  Servo.hh  SimpleQuadrupedController.hh  SimpleQuadrupedPose.hh  SplineCatmullRom.hh  SplineGaitController.hh  Strings.hh  Util.hh  ZMQContext.hh  protocol.h
API/src/: CMakeCache.txt  CMakeLists.txt  CallbackArray.cc  Coms.cc  ComsProxy.cc  ComsRecorder.cc  ComsRoute.cc  ComsSerial.cc  ComsUSB.cc  ComsVirtualDevice.cc  ComsZMQClient.cc  ComsZMQServer.cc  Device.cc  DeviceIMU.cc  DevicePlatformManager.cc  DogBotAPI.cc  DogBotController.cc  DogBotKinematics.cc  DogBotServer.cc  FirmwareUpdate.cc  Joint.cc  Joint4BarLinkage.cc  JointRelative.cc  LegController.cc  LegKinematics.cc  LegKinematicsV4.cc  LineABC2d.cc  Makefile  PlatformManager.cc  PoseAngles.cc  SerialComs.cc  Servo.cc  SimpleQuadrupedController.cc  SimpleQuadrupedPose.cc  SplineCatmullRom.cc  SplineGaitController.cc  Strings.cc  Util.cc  ZMQContext.cc  cmake_install.cmake  (+18 more)
Bark/: Bark.pro  ServoTable.cc  ServoTable.hh  main.cc  main.cpp  mainwindow.cc  mainwindow.cpp  mainwindow.h  mainwindow.hh  mainwindow.ui
BootLoader/: Makefile  STM32F405xG.ld  bmcStubs.cpp  bootloader.h  bootonly_can_coms.cpp  can_coms.cpp  coms.cpp  flashops.cpp  flashops.hh  halconf.h  main.c  parameters.cpp
BootLoader/BMC2_BOARD/: board.mk
BootLoader/flash/: flash.c  flash.h  helper.c
Config/: ReadMe.md  config.json  configexample.json  dogbot-server.conf  dogbot-server.service  jig.json  tango.json  yoyo.json
Config/poses/: squatting.json  standing.json
Examples/Python/: dogtest.py  homeboy.py
Experiment/: .~lock.cala.csv#  README.txt  cal1.csv  cala.csv  data.csv  defs.mk  index.csv  rotNorm.cc  testRot.cc
Firmware/BMC2_BOARD/: board.c  board.h  board.mk
Firmware/BMC3_BOARD/: board.h  board.mk
Firmware/BootLoader/: Makefile  bmcStubs.cpp  flashops.cpp  main.c  mcuconf.h  parameters.cpp
Firmware/ext/STM32F4xx_DSP_StdPeriph_Lib/: Release_Notes.html
Firmware/include/: bmc.h  canbus.h  coms.h  exec.h  flashops.hh  motion.h
Firmware/release/: BMCV2.hex
Firmware/src/: Makefile  STM32F405xG.ld  STM32F405xG_boot.ld  STM32F405xG_boot_17.ld  TLE5012B.cpp  TLE5012B.h  can_coms.cpp  can_coms.hh  can_queue.cpp  canbus.cpp  coms.cpp  coms_serial.c  do_adc.c  do_pwm.c  do_pwm.cpp  drv8305.c  drv8305.h  drv8320.c  drv8320.h  drv8503.c  emergency_stop.cpp  exec.c  halconf.h  lan9252.cpp  lan9252.h  main.c  math.cpp  mathfunc.h  mcuconf.h  motion.cpp  notes  packet_queue.cpp  packet_usb.h  packet_usbcfg.c  packet_usbcoms.cpp  parameters.cpp  power.cpp  pwm.h  pwm_6state.cc  serial_packet.cpp  (+8 more)
GUI/: .gitignore  DogBot.qrc  DogBotUI.pro  ServoTable.cc  ServoTable.hh  mainwindow.cc  mainwindow.hh  mainwindow.ui
OpenBLT/: .gitignore  notes
ROS/: README.md
ROS/src/dogbot_control/: CMakeLists.txt
ROS/src/dogbot_simplegait/: CMakeLists.txt  package.xml
ROS/src/dogbot_utilities/: CMakeLists.txt  README.md  package.xml
ROS/src/dogbot_utilities/config/: dogbot_logging.yaml  sim_logging.yaml
ROS/src/dogbot_utilities/launch/: logger.launch
ROS/src/dogbot_utilities/scripts/: sqllogger.py
Scripts/: buildall.sh  makedocs.sh  pythonapi.sh  rosbuild.sh  setup.sh
Scripts/internal/: makedocs.sh
Utilities/DataRecorder/: README.md  postgres_and_grafana.md
Utilities/DataRecorder/config/: droptables.sql  jointstates.js  postgres.sql
Utilities/DataRecorder/src/: CMakeLists.txt  DataRecorder.cc
resources/: poweringup.md
resources/Documentation/: .gitignore  APIreference.md  DogBotAPIdocs.doxygen
resources/Documentation/html/: CallbackArray_8hh_source.html  Common_8hh_source.html  ComsProxy_8hh_source.html  ComsRecorder_8hh_source.html  ComsRoute_8hh_source.html  ComsSerial_8hh_source.html  ComsUSB_8hh_source.html  ComsVirtualDevice_8hh_source.html  ComsZMQClient_8hh_source.html  ComsZMQServer_8hh_source.html  Coms_8hh_source.html  DeviceIMU_8hh_source.html  DevicePlatformManager_8hh_source.html  Device_8hh_source.html  DogBotAPI_8hh_source.html  DogBotController_8hh_source.html  DogBotKinematics_8hh_source.html  Drv8503Registers_8hh_source.html  FirmwareUpdate_8hh_source.html  Joint4BarLinkage_8hh_source.html  JointRelative_8hh_source.html  Joint_8hh_source.html  LegController_8hh_source.html  LegKinematics_8hh_source.html  LineABC2d_8hh_source.html  PlatformManager_8hh_source.html  PoseAngles_8hh_source.html  Servo_8hh_source.html  SimpleQuadrupedController_8hh_source.html  SimpleQuadrupedPose_8hh_source.html  SplineCatmullRom_8hh_source.html  SplineGaitController_8hh_source.html  Strings_8hh_source.html  Util_8hh_source.html  ZMQContext_8hh_source.html  annotated.html  (+918 more)
src/: Makefile  STM32F405xG.ld  STM32F405xG_boot.ld  bmc.h  can_coms.cpp  can_queue.cpp  can_queue.hh  canbus.c  canbus.cpp  canbus.h  coms.cpp  coms.h  coms_serial.c  coms_serial.h  do_adc.c  do_pwm.c  drv8503.c  drv8503.h  eeprom.c  eeprom.h  emergency_stop.cpp  flashStubs.cpp  halconf.h  ld_eeprom_emu.ld  main.c  mathfunc.h  mcuconf.h  motion.cpp  motion.h  notes  packet_queue.cpp  packet_queue.hh  packet_usb.h  packet_usbcfg.c  packet_usbcoms.cpp  parameters.cpp  printfloat.cc  pwm.c  pwm.h  serial_packet.cpp  (+12 more)
src/BMC2_BOARD/: board.h
(+137 files in other folders)
