# This is a CMake example for Python
CMAKE_MINIMUM_REQUIRED (VERSION 3.5)

ADD_DEFINITIONS(-std=c++11)

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})


INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

# Dog bot stuff
#set(CMAKE_INSTALL_LIBDIR "/usr/local/lib")
#set(CMAKE_INSTALL_INCLUDEDIR "/usr/local/include")

FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(Eigen3 REQUIRED)
FIND_PACKAGE(DogBotAPI REQUIRED)

# Back to swig

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(pydogbotapi.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(pydogbotapi.i PROPERTIES SWIG_FLAGS "-includeall")

SWIG_ADD_MODULE(pydogbotapi python pydogbotapi.i pydogbotapi.cxx)


SWIG_LINK_LIBRARIES(pydogbotapi ${PYTHON_LIBRARIES} DogBotAPI )
